--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -5,5 +5,5 @@
   max-width: 1280px;
   min-width: 320px;
   min-height: 100vh;
-  font-family: 'Intel', Arial, sans-serif;
+  font-family: 'inter', Arial, sans-serif;
 }
