--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -7,6 +7,7 @@
   display: grid;
   grid-template-columns: repeat(3,  minmax(275px, 1fr));
   grid-template-rows: repeat(2, minmax(362px, 1fr));
+  grid-auto-rows: minmax(363px, 1fr);
   gap: 17px 20px;
   line-height: 0;
 }
