--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -7,7 +7,21 @@
   display: grid;
   grid-template-columns: repeat(3,  minmax(275px, 1fr));
   grid-template-rows: repeat(2, minmax(362px, 1fr));
-  grid-auto-rows: minmax(363px, 1fr);
+  grid-auto-rows: minmax(362px, 1fr);
   gap: 17px 20px;
   line-height: 0;
+}
+
+@media screen and (max-width: 984px) {
+  .cards {
+    grid-template-columns: repeat(2, minmax(275px, 1fr));
+    grid-template-rows: repeat(3, minmax(362px, 1fr));
+  }
+}
+
+@media screen and (max-width: 568px) {
+  .cards {
+    grid-template-columns: minmax(275px, 1fr);
+    grid-template-rows: repeat(auto-fit, minmax(362px, 1fr));
+  }
 }
