--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -7,3 +7,21 @@
   min-height: 100vh;
   font-family: 'inter', Arial, sans-serif;
 }
+
+@media screen and (max-width: 1140px) {
+  .page {
+    padding: 45px 100px 60px;
+  }
+}
+
+@media screen and (max-width: 984px) {
+  .page {
+    padding: 28px 40px 40px;
+  }
+}
+
+@media screen and (max-width: 568px) {
+  .page {
+    padding: 28px 0 36px;
+  }
+}
