--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -1,9 +1,3 @@
-.profile__avatar {
-  border-radius: 50%;
-  width: 120px;
-  height: 120px;
-}
-
 .profile {
   margin: 40px 0 51px;
   display: flex;
@@ -11,49 +5,10 @@
   width: 100%;
 }
 
-.profile__info {
-  display: flex;
-  color: #fff;
-  align-items: baseline;
-}
-
-.profile__text {
-  margin-left: 30px;
-}
-
-.profile__button {
-  background-image: url(../../images/pen.svg);
-  background-color: black;
-  background-repeat: no-repeat;
-  background-position: center;
-  border: #fff 1px solid;
-  width: 24px;
-  min-height: 24px;
-}
-
-.profile__add-button {
-  background-image: url(../../images/krest.svg);
-  background-repeat: no-repeat;
-  background-color: black;
-  width: 150px;
-  min-height: 50px;
-  background-position: center;
-  border: #fff 1px solid;
-  justify-self: end;
-  margin-left: auto;
-}
-
-.profile__title {
-  font-size: 42px;
-  font-weight: 500;
-  line-height: 48px;
-  margin: 0 18px 16px 0;
-}
-
-.profile__subtitle {
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 22px;
-  color: #fff;
-  margin: 0;
+@media screen and (max-width: 568px) {
+  .profile {
+    flex-direction: column;
+    box-sizing: border-box;
+    margin: 42px 0 36px;
+  }
 }
