--- a/pages/index.css
+++ b/pages/index.css
@@ -6,9 +6,15 @@
 @import url(../blocks/header/__logo/header__logo.css);
 
 @import url(../blocks/profile/profile.css);
+@import url(../blocks/profile/__avatar/profile__avatar.css);
+@import url(../blocks/profile/__text/profile__text.css);
+@import url(../blocks/profile/__info/profile__info.css);
+@import url(../blocks/profile/__button/profile__button.css);
+@import url(../blocks/profile/__subtitle/profile__subtitle.css);
+@import url(../blocks/profile/__title/profile__title.css);
+@import url(../blocks/profile/__add-button/profile__add-button.css);
 
 @import url(../blocks/gallery/gellary.css);
-
 @import url(../blocks/cards/cards.css);
 @import url(../blocks/cards/__element/cards__element.css);
 @import url(../blocks/cards/__image/cards__image.css);
@@ -16,6 +22,14 @@
 @import url(../blocks/cards/__title/cards__item.css);
 @import url(../blocks/cards/__like/cards__like.css);
 @import url(../blocks/cards/__like/_active/cards__like_active.css);
+
+@import url(../blocks/popup/popup.css);
+@import url(../blocks/popup/__item/popup__item.css);
+@import url(../blocks/popup/__close/popup__close.css);
+@import url(../blocks/popup/__container/popap__container.css);
+@import url(../blocks/popup/__title/popup__title.css);
+@import url(../blocks/popup/__text/popup__text.css);
+@import url(../blocks/popup/__save/popup__save.css);
 
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__info/footer__info.css);
