--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -5,7 +5,7 @@
   padding: 0;
   list-style: none;
   display: grid;
-  grid-template-columns: repeat(3,  minmax(275px, 1fr));
+  grid-template-columns: repeat(3,  minmax(230px, 282px));
   grid-template-rows: repeat(2, minmax(362px, 1fr));
   grid-auto-rows: minmax(362px, 1fr);
   gap: 17px 20px;
@@ -14,7 +14,7 @@
 
 @media screen and (max-width: 984px) {
   .cards {
-    grid-template-columns: repeat(2, minmax(275px, 1fr));
+    grid-template-columns: repeat(2, minmax(230px, 1fr));
     grid-template-rows: repeat(3, minmax(362px, 1fr));
   }
 }
