--- a/blocks/popup/__container/popap__container.css
+++ b/blocks/popup/__container/popap__container.css
@@ -9,3 +9,10 @@
   border-radius: 10px;
   box-sizing: border-box;
 }
+
+@media screen and (max-width: 568px) {
+  .popup__container {
+    width: 282px;
+    height: 322px;
+  }
+}
