--- a/blocks/popup/__item/popup__item.css
+++ b/blocks/popup/__item/popup__item.css
@@ -1,3 +1,10 @@
 .popup__item {
   width: 500px;
 }
+
+@media screen and (max-width: 568px) {
+  .popup__item {
+    width: 282px;
+    margin-bottom: 16px;
+  }
+}
