--- a/blocks/popup/__save/popup__save.css
+++ b/blocks/popup/__save/popup__save.css
@@ -15,3 +15,13 @@
 .popup__save:hover {
   opacity: .8;
 }
+
+@media screen and (max-width: 568px) {
+  .popup__save {
+    width: 238px;
+    height: 46px;
+    font-size: 14px;
+    line-height: 17px;
+    margin: 45px 0 25px;
+  }
+}
