--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -3,6 +3,16 @@
   font-weight: 900;
   line-height: 29px;
   align-self: baseline;
-  padding: 34px 0 0 36px;
+  padding: 34px 5px 0 36px;
   margin: 0 0 44px;
+}
+
+@media screen and (max-width: 568px) {
+  .popup__title {
+    font-size: 18px;
+    line-height: 22px;
+    padding: 25px 0 0 0;
+    align-self: center;
+    margin-bottom: 69px;
+  }
 }
