завершил js скрипт обновил

--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -4,3 +4,9 @@
   align-items: baseline;
   text-align: center;
 }
+
+@media screen and (max-width: 628px) {
+  .profile__info {
+    max-width: 256px;
+  }
+}
