--- a/blocks/cards/__like/_active/cards__like_active.css
+++ b/blocks/cards/__like/_active/cards__like_active.css
@@ -1,4 +1,4 @@
 .cards__like:active {
-  background-image: url(../../../../images/like-black.png);
+  background-image: url(../../../../images/likeblack.png);
   opacity: 1;
 }
