--- a/blocks/cards/__like/cards__like.css
+++ b/blocks/cards/__like/cards__like.css
@@ -3,8 +3,21 @@
   width: 22px;
   height: 19px;
   transition: .7s;
+  background-image: url(../../../images/like.svg);
+  background-position: center center;
+  border: none;
+  background-repeat: no-repeat;
+  background-color: #fff;
+  background-size: cover;
 }
 
 .cards__like:hover {
   opacity: .5;
+  cursor: pointer;
+  transform: scale(1.2);
+}
+
+.cards__like:active {
+  background-image: url(../../../images/likeblack.svg);
+  opacity: 1;
 }
