--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -1,6 +1,5 @@
-.popup__container {
+.popup__form {
   width: 430px;
-  height: 330px;
   background-color: #fff;
   display: flex;
   justify-content: space-between;
@@ -8,11 +7,11 @@
   flex-direction: column;
   border-radius: 10px;
   box-sizing: border-box;
+  box-shadow: 0 0 25px 0 rgba(0, 0, 0, .15);
 }
 
 @media screen and (max-width: 568px) {
-  .popup__container {
+  .popup__form {
     width: 282px;
-    height: 322px;
   }
 }
