--- a/blocks/popup/__save/popup__save.css
+++ b/blocks/popup/__save/popup__save.css
@@ -1,7 +1,6 @@
 .popup__save {
   width: 358px;
-  height: 50px;
-  background-color: #000;
+  min-height: 50px;
   color: #fff;
   margin: 48px 0 37px;
   padding: 0;
@@ -9,17 +8,22 @@
   font-weight: 400;
   line-height: 22px;
   border-radius: 2px;
+  border-color: #000;
+  background-color: #000;
+  background-position: center;
+  background-repeat: no-repeat;
   transition: 0.8s;
 }
 
 .popup__save:hover {
   opacity: .8;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 568px) {
   .popup__save {
     width: 238px;
-    height: 46px;
+    min-height: 46px;
     font-size: 14px;
     line-height: 17px;
     margin: 45px 0 25px;
