--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,5 +1,4 @@
 .popup__container {
-  width: 100%;
   height: 100%;
   top: 0;
   left: 0;
@@ -8,4 +7,11 @@
   justify-content: center;
   flex-direction: column;
   box-sizing: border-box;
+  width: 510px;
+}
+
+@media screen and (max-width: 568px) {
+  .popup__container {
+    width: 282px;
+  }
 }
