--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -8,7 +8,7 @@
   background-repeat: no-repeat;
   border: none;
   transition: 0.8s;
-  margin: 0 0 8px auto;
+  margin: -38px -38px 8px auto;
 }
 
 .popup__close:hover {
@@ -21,6 +21,6 @@
     width: 20px;
     height: 20px;
     background-size: 20px 20px;
-    margin: 0 0 16px auto;
+    margin: -44px 0 16px auto;
   }
 }
