--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,5 +1,5 @@
 .popup__container {
-  height: 100%;
+  height: 330px;
   top: 0;
   left: 0;
   display: flex;
@@ -7,11 +7,15 @@
   justify-content: center;
   flex-direction: column;
   box-sizing: border-box;
-  width: 510px;
+  width: 430px;
+  box-shadow: 0 0 25px 0 rgba(0, 0, 0, .15);
+  background-color: #fff;
+  border-radius: 10px;
 }
 
 @media screen and (max-width: 568px) {
   .popup__container {
     width: 282px;
+    height: 322px;
   }
 }
