--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,5 +1,5 @@
 .popup__container {
-  height: 330px;
+  min-height: 330px;
   top: 0;
   left: 0;
   display: flex;
@@ -16,6 +16,6 @@
 @media screen and (max-width: 568px) {
   .popup__container {
     width: 282px;
-    height: 322px;
+    min-height: 322px;
   }
 }
