--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -16,6 +16,12 @@
   cursor: pointer;
 }
 
+@media screen and (max-width: 726px) {
+  .profile__add-button {
+    width: 70px;
+  }
+}
+
 @media screen and (max-width: 568px) {
   .profile__add-button {
     margin-left: 0;
