--- a/blocks/profile/__button/profile__button.css
+++ b/blocks/profile/__button/profile__button.css
@@ -7,13 +7,18 @@
   width: 24px;
   height: 24px;
   transition: .5s;
-  margin-right: 18px;
 }
 
 .profile__button:hover {
   opacity: 60%;
   cursor: pointer;
   transform: scale(1.2);
+}
+
+@media screen and (max-width: 726px) {
+  .profile__button {
+    background-size: 7.5px 7.5px;
+  }
 }
 
 @media screen and (max-width: 568px) {
