--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -9,10 +9,17 @@
   max-width: 294px;
 }
 
-@media screen and (max-width: 672px) {
+@media screen and (max-width: 726px) {
   .profile__title {
     font-size: 27px;
     line-height: 33px;
     margin: 0 10px 0 0;
+    max-width: 275px;
+  }
+}
+
+@media screen and (max-width: 568px) {
+  .profile__title {
+    max-width: 275px;
   }
 }
