--- a/blocks/cards/__image/cards__image.css
+++ b/blocks/cards/__image/cards__image.css
@@ -1,7 +1,9 @@
 .cards__image {
   width: 100%;
   min-height: 280px;
+  max-height: 280px;
   object-fit: cover;
+  object-position: center;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
 }
