--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -8,6 +8,7 @@
   grid-template-columns: repeat(3,  minmax(230px, 282px));
   grid-template-rows: repeat(2, minmax(362px, 1fr));
   grid-auto-rows: minmax(362px, 1fr);
+  grid-auto-columns: minmax(230px, 282px);
   gap: 17px 20px;
   line-height: 0;
 }
