--- a/blocks/cards/__image/cards__image.css
+++ b/blocks/cards/__image/cards__image.css
@@ -6,4 +6,9 @@
   object-position: center;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
+  transition: .4s;
+}
+
+.cards__image:hover {
+  opacity: .7;
 }
