--- a/blocks/popup/__text/popup__text.css
+++ b/blocks/popup/__text/popup__text.css
@@ -7,10 +7,8 @@
   font-size: 14px;
   font-weight: 400;
   line-height: 17px;
-}
-
-.popup__text:first-of-type {
-  margin-bottom: 25px;
+  margin-bottom: 5px;
+  background-color: rgba(0, 0, 0, 0);
 }
 
 .popup__text::placeholder {
