--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -12,7 +12,7 @@
     font-size: 18px;
     line-height: 22px;
     padding: 0;
-    align-self: center;
+    align-self: flex-start;
     margin-bottom: 69px;
     margin-right: 8px;
     margin-top: 29px;
